--- a/views/index.hbs
+++ b/views/index.hbs
@@ -115,6 +115,7 @@
         </div>
         <div class="w3-quarter">
           <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
+          <a href="http://localhost:3000/rankings">Clourpop</a>
           <p class="w3-large">Design</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore.</p>
