--- a/views/product-list.hbs
+++ b/views/product-list.hbs
@@ -12,7 +12,7 @@
                 <p>Brand: {{brand}}</p>
                 <p>Description: {{description}}</p>
                 <div class="btn-group" style="width: 100%">
-                    <a href="/edit/{{id}}" class="btn btn-outline-dark btn-sm">Edit Product</a>
+                    <a href="/favorite-product/{{id}}" class="btn btn-outline-dark btn-sm">Edit Product</a>
                     <a href="/product/delete/{{id}}" class="btn btn-dark btn-sm">Delete Product</a>
                 </div>
             </article>
