--- a/views/pages/list.hbs
+++ b/views/pages/list.hbs
@@ -7,7 +7,7 @@
         {{#each products}}
         <div class="col-md-4">
             <article class="product">
-                {{id}}
+                <h1>ID{{_id}} </h1>
                 <h2>{{name}} </h2>
                 <hr>
                 <p>Brand: {{brand}}</p>
@@ -17,7 +17,9 @@
                     <img src="{{image_link}}" width="200" height="200">
                 </div>
                 <div class="btn-group" style="width: 100%">
-                    <a href="/{{id}}/edit" class="btn btn-outline-dark btn-sm">Edit Product</a>
+
+                    <a href="/product/favorite-product/{{_id}}" class="btn btn-outline-dark btn-sm">View Details</a>
+                    {{!-- <a href="/{{id}}/edit" class="btn btn-outline-dark btn-sm">Edit Product</a> --}}
                     {{!-- <a href="/rankings/delete/{{id}}" class="btn btn-dark btn-sm">Delete Product</a> --}}
                     <a href="/collection/create/" class="btn btn-success">Add Favorite</a>
                 </div>
