--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,6 +55,8 @@
             <a href="/auth/signup" class="w3-bar-item w3-button">Sign-Up</a>
             <a href="/auth/login" class="w3-bar-item w3-button">Login</a>
             <a href="/auth/logout" class="w3-bar-item w3-button">Logout</a>
+            <a href="/collection/upload/" class="w3-bar-item w3-button">Upload Image</a>
+
           </ul>
         </div>
         <!-- Hide right-floated links on small screens and replace them with a menu icon -->
