--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,6 @@
 
 <body>
 
-
   <!-- Navbar (sit on top) -->
   <div class="w3-top">
     <div class="w3-bar w3-white w3-card" id="myNavbar">
@@ -56,6 +55,8 @@
             <a href="/auth/signup" class="w3-bar-item w3-button">Sign-Up</a>
             <a href="/auth/login" class="w3-bar-item w3-button">Login</a>
             <a href="/auth/logout" class="w3-bar-item w3-button">Logout</a>
+            <a href="/collection/upload/" class="w3-bar-item w3-button">Upload Image</a>
+
           </ul>
         </div>
         <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -65,83 +66,6 @@
           <i class="fa fa-bars"></i>
         </a>
       </div>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="/" class="w3-bar-item w3-button w3-wide">BULK BEAUTY</a>
-    <!-- Right-sided navbar links -->
-    <div class="w3-right w3-hide-small">
-     {{!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav ml-auto"> --}}
-            {{!-- <a href="/">Home</a>  --}}
-             <a href="/about" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i>About Us</a> 
-            <a href="/rankings" class="w3-bar-item w3-button"><i class="fa fa-th"></i>Product search</a> 
-            <a href="/product" class="w3-bar-item w3-button"><i class="fa fa-th"></i> All Product</a> 
-            <a href="/collection/create" class="w3-bar-item w3-button"><i class="fa fa-th"></i> Create Collection </a> 
-            <a href="/user/profile" class="w3-bar-item w3-button"> <i class="fa fa-user"></i>Profile Page </a> 
-            <a href="/auth/signup" class="w3-bar-item w3-button">Sign-Up</a> 
-            <a href="/auth/login" class="w3-bar-item w3-button">Login</a> 
-            <a href="/auth/logout" class="w3-bar-item w3-button">Logout</a> 
-         </ul>
-      </div>
-    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
-</div>
-{{!-- 
-<!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="/product" onclick="w3_close()" class="w3-bar-item w3-button">ALL PRODUCTS</a>
-  <a href="/rankings" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCT SEARCH</a>
-  <a href="/collection/create" onclick="w3_close()" class="w3-bar-item w3-button">CREATE COLLECTION</a>
-  <a href="/user/profile" onclick="w3_close()" class="w3-bar-item w3-button">MY PROFILE</a>
-  <a href="/auth/logout" onclick="w3_close()" class="w3-bar-item w3-button">LOGOUT</a>
-</nav> --}}
-
-<!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
-    <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><a href="/about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
-  </div> 
-  {{!-- <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div> --}}
-</header>
-
-<!-- About Section -->
-<div class="w3-container" style="padding:128px 16px" id="about">
-  <h3 class="w3-center">ABOUT THE COMPANY</h3>
-  <p class="w3-center w3-large">Key features of our company</p>
-  <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-quarter">
-      <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
-      <p class="w3-large">Responsive</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Passion</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Design</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-
     </div>
     {{!--
     <!-- Sidebar on small screens when clicking the menu icon -->
@@ -163,7 +87,7 @@
         <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
         <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
 
-
+        <<<<<<< HEAD=======>>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
       </div>
       {{!-- <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
         <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -194,9 +118,12 @@
         </div>
         <div class="w3-quarter">
           <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-          <p class="w3-large">Design</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore.</p>
+          <<<<<<< HEAD <a href="http://localhost:3000/rankings">Clourpop</a>
+            =======
+            >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+            <p class="w3-large">Design</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore.</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
@@ -206,148 +133,216 @@
         </div>
       </div>
     </div>
+    <<<<<<< HEAD======={{!-- <!DOCTYPE html>
+      <html>
+
+      <head>
+        <style>
+          body {
+            background-image: url('makeupcollage.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+          }
+        </style>
+      </head>
+
+      <div class="index-selection">
+        <h1>{{title}} 🚀</h1>
 
 
+      </div> --}}
 
-    {{!--
-    <!DOCTYPE html>
-    <html>
 
-    <head>
-      <style>
+      {{!-- <style>
         body {
           background-image: url('makeupcollage.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
         }
-      </style>
-    </head>
+      </style> --}}
 
-    <div class="index-selection">
-      <h1>{{title}} 🚀</h1>
+      {{!-- <h1 style="text-align: center;"></h1> --}}
 
+      {{!-- <a href="/about"> About Us</a>
 
-    </div> --}}
+      <a href="/auth/signup"> Sign-Up</a>
+      <a href="/auth/login"> Login</a> --}}
 
+      {{!-- <a href="/rankings"> Product Search</a>
+      <a href="/user/profile">Profile Page</a> --}}
 
-    {{!-- <style>
-      body {
-        background-image: url('makeupcollage.jpg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: cover;
-      }
-    </style> --}}
-
-    {{!-- <h1 style="text-align: center;"></h1> --}}
-
-    {{!-- <a href="/about"> About Us</a>
-
-    <a href="/auth/signup"> Sign-Up</a>
-    <a href="/auth/login"> Login</a> --}}
-
-    {{!-- <a href="/rankings"> Product Search</a>
-    <a href="/user/profile">Profile Page</a> --}}
-
-    {{!-- <h1>{{title}} 🚀</h1>
-    <p>Welcome Ironhacker!</p> --}}
+      {{!-- <h1>{{title}} 🚀</h1>
+      <p>Welcome Ironhacker!</p> --}}
 
 
 
-    {{!-- <a href="/auth/login"> Login</a> --}}
+      {{!-- <a href="/auth/login"> Login</a> --}}
 
 
 
-    {{!--
-    <a href="/rankings/edit/{{id}}">Edit</a>
+      {{!--
+      <a href="/rankings/edit/{{id}}">Edit</a>
 
-    <a href="/rankings/delete/{{id}}">Delete</a>
+      <a href="/rankings/delete/{{id}}">Delete</a>
 
-    <a href="/rankings/delete/{{id}}">Delete</a> --}}
-
-
-    {{!-- <a href="/auth/login"> Login</a> --}}
-
-    {{!-- <a href="/product"> Products List </a>
-    <a href="/collection/create"> Create Collection </a> --}}
+      <a href="/rankings/delete/{{id}}">Delete</a> --}}
 
 
+      {{!-- <a href="/auth/login"> Login</a> --}}
 
-{{!-- <style>
-  body {
-    background-image: url('makeupcollage.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover; --}}
+      {{!-- <a href="/product"> Products List </a>
+      <a href="/collection/create"> Create Collection </a> --}}
+
+
+      >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
 
 
 
-    <p><a href="#about" id="learn-text"
-        class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
-        more and start today</a></p>
+      {{!--
+      <!DOCTYPE html>
+      <html>
 
-    <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" alt="">
+      <head>
+        <style>
+          body {
+            background-image: url('makeupcollage.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+          }
+        </style>
+      </head>
+
+      <div class="index-selection">
+        <h1>{{title}} 🚀</h1>
+
+
+      </div> --}}
+
+
+      {{!-- <style>
+        body {
+          background-image: url('makeupcollage.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+      </style> --}}
+
+      {{!-- <h1 style="text-align: center;"></h1> --}}
+
+      {{!-- <a href="/about"> About Us</a>
+
+      <a href="/auth/signup"> Sign-Up</a>
+      <a href="/auth/login"> Login</a> --}}
+
+      {{!-- <a href="/rankings"> Product Search</a>
+      <a href="/user/profile">Profile Page</a> --}}
+
+      <<<<<<< HEAD {{!-- <h1>{{title}} 🚀</h1>
+        <p>Welcome Ironhacker!</p> --}}
 
 
 
-    {{!--
-    <!-- Image of location/map -->
-    <img src="https://gisgeography.com/wp-content/uploads/2020/06/Miami-Map-Feature.jpg" class="w3-image w3-greyscale"
-      style="width:100%;margin-top:48px">
+        {{!-- <a href="/auth/login"> Login</a> --}}
+
+
+
+        {{!--
+        <a href="/rankings/edit/{{id}}">Edit</a>
+
+        <a href="/rankings/delete/{{id}}">Delete</a>
+
+        <a href="/rankings/delete/{{id}}">Delete</a> --}}
+
+
+        {{!-- <a href="/auth/login"> Login</a> --}}
+
+        {{!-- <a href="/product"> Products List </a>
+        <a href="/collection/create"> Create Collection </a> --}}
+
+
+
+
+        <p><a href="#about" id="learn-text"
+            class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
+            more and start today</a></p>
+
+        <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" alt="">
+
+
+
+        =======
+        <p><a href="#about" id="learn-text"
+            class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
+            more and start today</a></p>
+
+        <img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" alt="">
+
+
+
+        >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+        {{!--
+        <!-- Image of location/map -->
+        <img src="https://gisgeography.com/wp-content/uploads/2020/06/Miami-Map-Feature.jpg"
+          class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
   </div> --}}
 
 
   <!-- Footer -->
+  <<<<<<< HEAD=======>>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
+    <footer class="w3-center w3-black w3-padding-64">
+      <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+      <div class="w3-xlarge w3-section">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-snapchat w3-hover-opacity"></i>
+        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+      </div>
+      <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
+          class="w3-hover-text-green">Ironhack</a></p>
+    </footer>
 
-  <footer class="w3-center w3-black w3-padding-64">
-    <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-    <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
-        class="w3-hover-text-green">Ironhack</a></p>
-  </footer>
+    {{!--
+    <script>
+      // Modal Image Gallery
+      function onClick(element) {
+        document.getElementById("img01").src = element.src;
+        document.getElementById("modal01").style.display = "block";
+        var captionText = document.getElementById("caption");
+        captionText.innerHTML = element.alt;
+      }
+    </script> --}}
+    <<<<<<< HEAD=======<footer class="w3-center w3-black w3-padding-64">
+      <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+      <div class="w3-xlarge w3-section">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-snapchat w3-hover-opacity"></i>
+        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+      </div>
+      <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank"
+          class="w3-hover-text-green">Ironhack</a></p>
+      </footer>
 
-  {{!--
-  <script>
-    // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
-    }
-  </script> --}}
-
-<footer class="w3-center w3-black w3-padding-64">
-  <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://github.com/rebeccasundel/makeup-project" title="W3.CSS" target="_blank" class="w3-hover-text-green">Ironhack</a></p>
-</footer>
-
-{{!-- <script>
-  // Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-</script> --}}
+      {{!--
+      <script>
+        // Modal Image Gallery
+        function onClick(element) {
+          document.getElementById("img01").src = element.src;
+          document.getElementById("modal01").style.display = "block";
+          var captionText = document.getElementById("caption");
+          captionText.innerHTML = element.alt;
+        }
+      </script> --}}
+      >>>>>>> 22f32d0a919bab4e7fc83c64d6df1ad85c78e54e
 
 
 </body>
