--- a/views/pages/create.hbs
+++ b/views/pages/create.hbs
@@ -1,14 +1,46 @@
 <h1>Create Makeup Look</h1>
 {{!-- "/collection/create/{{makeupId}}" --}}
 <div>
-    <form action="/collection/create" id="create-product-list" enctype="multipart/form-data" method="POST">
-        <input type="number" id="top3" name="top3" min="1" max="3">
-        <input type="collection" name="collection" placeholder="collection name" />
-        <input type="text" id="brand-form" name="brand" placeholder="brand" />
-        <input type="name" name="name" placeholder="name" />
-        <input type="text" name="description" placeholder="description" />
-        {{!-- <input type="radio" name="undertone" placeholder="undertone" /> --}}
-        <p>Recommended Undertone:</p>
+    <form action="/collection/create/" id="create-product-list" method="POST">
+        {{!-- <input type="number" id="top3" name="top3" min="1" max="3"> --}}
+
+        <div class="form-group col-md-4"></div>
+        <div class="col-md-4 mb-2">
+            <label>Collection Name</label>
+
+            <input class="form-control" type="collection" name="collectionName" placeholder="collection name" />
+        </div>
+        <div class="col-md-4 mb-2">
+            <label>Brand</label>
+            <input class="form-control" type="text" id="brand-form" name="brand1" placeholder="brand" />
+        </div>
+        <div class="col-md-4 mb-2">
+            <p>Rank your top 3 products</p>
+            <label>1.</label>
+            <input class="form-control" type="name" name="name" placeholder="product name" />
+        </div>
+        {{!-- <input type="name" name="name1" placeholder="product name" /> --}}
+        <div class="col-md-4 mb-2">
+            <label>2.</label>
+            <input class="form-control" type="name" name="name2" placeholder="product name" />
+        </div>
+        {{!-- <input type="name" name="name1" placeholder="product name" /> --}}
+        <div class="col-md-4 mb-2">
+            <label>3.</label>
+            <input class="form-control" type="name" name="name3" placeholder="product name" />
+        </div>
+        {{!-- <input type="name" name="name1" placeholder="product name" /> --}}
+        <div class="col-md-4 mb-2">
+            <label>Description</label>
+            <textarea class="form-control" type="text" name="description" col="20" placeholder="description"></textarea>
+            {{!-- <input type="radio" name="undertone" placeholder="undertone" /> --}}
+        </div>
+        <p>Recommended Undertone:<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-info-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                <path
+                    d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+            </svg></p>
         <input type="radio" id="cool" name="undertone" value="cool">
         <label for="cool">Cool</label><br>
         <input type="radio" id="neutral" name="undertone" value="neutral">
@@ -26,25 +58,59 @@
         </form> --}}
     </section>
 </div>
-<div>
+{{!-- <div>
     <h1>Image</h1>
     <img src="{{path}}" height="200">
-</div>
+</div> --}}
 
-{{#each cop}}
-<div class="card" style="width: 18rem;">
+{{!-- {{#each cop}}
+<div>
+    <div class="card" style="width: 18rem;"></div>
+    <h5>{{collectionName}}</h5>
+    <img class="card-img-top" src="https://cdn.britannica.com/35/222035-131-9FC95B31/makeup-cosmetics.jpg"
+        alt="Card image cap">
     <div class="card-body">
-        <h5 class="card-title">Name {{name}}</h5>
-        <img src="{{path}}" height="200">
-        <h6 class="card-subtitle mb-2 text-muted">Brand:{{brand}}</h6>
+
+        <h6 class="card-title">Brand:{{brand}}</h6>
+        <h5 class="card-title">1.{{name}}</h5>
+        <h5 class="card-title">2. {{name2}}</h5>
+        <h5 class="card-title">3. {{name3}}</h5>
         <p class="card-text">Description: {{description}}</p>
-        <h5 class="card-text">Recommended undertone:{{undertone}}</h5>
+        <h5>Recommended undertone:{{undertone}}</h5>
         <a href="/collection/create/edit/{{_id}}" class="card-link">Edit</a>
 
 
-        <form action="/collection/create/delete/{{_id}}" class="card-link" method="POST">
+        <form class="btn btn-primary" action=" /collection/create/delete/{{_id}}" class="card-link" method="POST">
             <button>🗑 DELETE</button>
         </form>
+    </div>
+</div>
+</div>
+{{/each}} --}}
+<hr>
+
+{{#each cop}}
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="https://cdn.britannica.com/35/222035-131-9FC95B31/makeup-cosmetics.jpg"
+        alt="Card image cap">
+    <div class="card-body">
+        <h5>{{collectionName}}</h5>
+        <h5 class="card-title">{{brand}}</h5>
+        <p class="card-text">Description: {{description}}.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">1.{{name}}</li>
+        <li class="list-group-item">2. {{name2}}</li>
+        <li class="list-group-item">3. {{name3}}</li>
+    </ul>
+    <p class="card-text">Recommended Undertone: {{undertone}}</p>
+    <div class="card-body">
+        {{!-- <a href=" /collection/create/delete/{{_id}}" class="btn btn-outline-danger">Delete Collection</a> --}}
+        <a href="/collection/create/edit/{{_id}}" class="btn btn-primary">Edit</a>
+        <form action=" /collection/create/delete/{{_id}}" class="btn btn-outline-danger" method="POST">
+            <button> Delete Collection</button>
+        </form>
+        {{!-- <a href="#" class="card-link">Another link</a> --}}
     </div>
 </div>
 {{/each}}
