--- a/views/rankings.hbs
+++ b/views/rankings.hbs
@@ -6,7 +6,7 @@
 
 
     <div>
-        <input id="product-name-input" type="text" />
+        <input id="product-name-input" type="text" placeholder=" Search Brand ...covergirl, colourpop," />
         <button id="get-product-btn">Search</button>
     </div>
 
@@ -21,6 +21,7 @@
         {{!-- <button id="add-favorites-button">Add Favorites</button> --}}
 
         {{!-- <button id="add-favorites-button">Add Favorites</button> --}}
+
 
     </div>
     <div>
