--- a/views/pages/details.hbs
+++ b/views/pages/details.hbs
@@ -1,11 +1,11 @@
-<h2>Room {{responseFromDB.name}}</h2>
+{{!-- <h2>Room {{responseFromDB.name}}</h2>
 
 <img src="{{responseFromDB.imageUrl}}" alt="{{responseFromDB.name}} image" height="200">
 <p>{{roomFromDB.owner.username}} - {{responseFromDB.description}}</p>
 {{#if isOwner}}
 <a href="/room/{{_id}}/edit">Edit the room</a>
 {{/if}}
-{{!--
+{{!-- --}}
 {{#each responseFromDB.reviews}}
 <p>{{user.username}}</p>
 <p>{{comment}}</p>
